--- a/bqBOX/res/layout/activity_ebooks.xml
+++ b/bqBOX/res/layout/activity_ebooks.xml
@@ -11,23 +11,43 @@
     tools:context="com.jfrascon.bqbox.EbooksActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/nombre_fichero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
         android:clickable="false"
         android:text="@string/lista_ebooks"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <TextView
+        android:id="@+id/seleccion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nombre_fichero"
+        android:layout_centerHorizontal="true"
+        android:clickable="false"
+        android:text="@string/selecciona_criterio_ordenacion"
+        android:textAppearance="?android:attr/textAppearance" 
+        android:layout_marginTop="15dp"/>
+    
+    
+    <Spinner
+        android:id="@+id/desplegable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seleccion"
+        android:layout_centerHorizontal="true"
+         />
+
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/lista_ebooks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp" >
+        android:layout_below="@+id/desplegable"
+        android:layout_centerHorizontal="true" 
+        android:layout_marginTop="15dp"
+        >
     </ListView>
 
     </RelativeLayout>
