--- a/bqBOX/res/layout/layout_fila.xml
+++ b/bqBOX/res/layout/layout_fila.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     >
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp" >
 
     <ImageView
         android:id="@+id/imagen_generica"
@@ -9,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:padding="5dp"
         android:src="@drawable/ic_launcher" />
 
     <TextView
@@ -19,7 +21,7 @@
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/imagen_generica"
         android:text="TextView"
-        android:textSize="14sp" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/fecha_modificacion"
