Añadida navegación por carpetas, incluyento ascenso a los directorios superiores. Corregido un bug que hacía que el fichero descargado fuera inservible.

--- a/bqBOX/res/layout/layout_fila.xml
+++ b/bqBOX/res/layout/layout_fila.xml
@@ -21,6 +21,8 @@
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/imagen_generica"
         android:text="TextView"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:textSize="16sp" />
 
     <TextView
